--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body class="inter">
     <header>
       <nav>
-        <h2>Tech<span class="gradient-font">Wave</span></h2>
+        <img src="./assets/TechWave.png" alt="" />
 
         <ul class="navbar-features">
           <li><a href="">About</a></li>
@@ -38,6 +38,18 @@
       <section id="banner">
         <div class="banner-container">
           <img src="./assets/hero-circle.png" alt="" />
+
+          <div class="banner-information">
+            <h2 class="white">TechWave</h2>
+            <p class="white">
+              Your daily dose of tech insights, productivity hacks,and personal
+              growth
+            </p>
+            <div class="banner-information-button">
+              <button>listen On Spotify</button>
+              <button>Subscribe</button>
+            </div>
+          </div>
         </div>
       </section>
     </main>
