need to think about the structure of that banner logo

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
     <main>
       <section id="banner">
         <div class="banner-container">
-          <img src="./assets/hero-circle.png" alt="" />
+          <div class="circle-container">
+            <img src="./assets/hero-circle.png" alt="Circle" class="circle" />
+            <img src="./assets/microphone.png" alt="Mic" class="mic" />
+          </div>
 
           <div class="banner-information">
             <h2 class="white">TechWave</h2>
@@ -45,10 +48,10 @@
               Your daily dose of tech insights, productivity hacks,and personal
               growth
             </p>
-            <div class="banner-information-button">
-              <button>listen On Spotify</button>
-              <button>Subscribe</button>
-            </div>
+          </div>
+          <div class="banner-information-button">
+            <button>listen On Spotify</button>
+            <button>Subscribe</button>
           </div>
         </div>
       </section>
