Complete Version of banner , updated buttons and complete the banner section except the tooltip (new) type button will do later

--- a/index.html
+++ b/index.html
@@ -45,13 +45,25 @@
           <div class="banner-information">
             <h2 class="white">TechWave</h2>
             <p class="white">
-              Your daily dose of tech insights, productivity hacks,and personal
+              Your daily dose of tech insights, productivity hacks, and personal
               growth
             </p>
           </div>
           <div class="banner-information-button">
-            <button>listen On Spotify</button>
-            <button>Subscribe</button>
+            <button class="gradient-button-2">
+              <img
+                src="./assets/spotify.png"
+                alt=""
+                class="spotify-image"
+              />Listen On Spotify
+            </button>
+            <button class="transparent-btn">
+              <img
+                src="./assets/message.png"
+                alt=""
+                class="image-subscribe"
+              />Subscribe
+            </button>
           </div>
         </div>
       </section>
