tried to add challange part host

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <img src="./assets/TechWave.png" alt="" />
 
       <ul class="navbar-features">
-        <li><a href="">About</a></li>
-        <li><a href="">Episode</a></li>
-        <li><a href="">Host</a></li>
+        <li><a href="#apps">About</a></li>
+        <li><a href="#why-choose-techwave">Episode</a></li>
+        <li><a href="#featured-episodes">Host</a></li>
       </ul>
 
       <button class="gradient-button">
@@ -153,7 +153,7 @@
 
 
 
-              <h3>How Dukaan moved out of Cloud and on to Bare Metal w/ Subhash | Ep 5</h3>
+              <h3>How Dukaan moved out of Cloud and on to Bare Metal </h3>
               <p>Dukaan recently moved out of public clouds like AWS, GCP, and Azure are hosting their infra on bare
                 metal instances.
 
@@ -175,7 +175,7 @@
               <h3>SCALER POD 04 ft. Subhash</h3>
               <p>Welcome to #ScalerPod by Scaler where our host Arnav talks the leaders of the biggest tech companies
                 from India about
-                software engineering challenges they are solving!
+                software engineering
               </p>
               <div class="card-duration">
                 <img src="./assets/clock.png" alt="">
@@ -192,7 +192,7 @@
               <h3>Who Really Betrayed the Ummah? | Sahil Adeem</h3>
               <p>With our first ever guest Sahil Adeem, Sh. Usta and Usman explore the true nature of Islam as an
                 energizing force
-                against all forms of oppression and what it means to be a truly fearless scholar today.</p>
+              </p>
 
               <div class="card-duration">
                 <img src="./assets/clock.png" alt="">
@@ -201,6 +201,39 @@
             </div>
           </div>
 
+        </div>
+        <h1 class="host">Meet The Host</h1>
+        <div class="host-container">
+          <img src="./assets/host.png" alt="">
+          <div class="host-information">
+            <h3 class="white1">Alex Kumar</h3>
+            <p class="white1">Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech
+              industry for over
+              10 years,
+              working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry
+              leaders and
+              practical advice for anyone looking to grow in tech.</p>
+            <div class="host-social">
+
+              <a href="https://www.facebook.com/ibneyrupom/">
+                <img class="social-image" src="./assets/linkedin.png" alt="" />
+              </a>
+              <a href="https://www.facebook.com/ibneyrupom/">
+                <img class="social-image" src="./assets/x.png" alt="" />
+              </a>
+              <a href="https://www.facebook.com/ibneyrupom/">
+                <img class="social-image" src="./assets/instagram.png" alt="" />
+              </a>
+              <a href="https://www.facebook.com/ibneyrupom/">
+                <img class="social-image" src="./assets/youtube.png" alt="" />
+              </a>
+
+
+
+
+
+            </div>
+          </div>
         </div>
 
       </div>
