--- a/index.html
+++ b/index.html
@@ -216,16 +216,16 @@
             <div class="host-social">
 
               <a href="https://www.facebook.com/ibneyrupom/">
-                <img class="social-image" src="./assets/linkedin.png" alt="" />
+                <img src="./assets/linkedin.png" alt="" />
               </a>
               <a href="https://www.facebook.com/ibneyrupom/">
-                <img class="social-image" src="./assets/x.png" alt="" />
+                <img src="./assets/x.png" alt="" />
               </a>
               <a href="https://www.facebook.com/ibneyrupom/">
-                <img class="social-image" src="./assets/instagram.png" alt="" />
+                <img src="./assets/instagram.png" alt="" />
               </a>
               <a href="https://www.facebook.com/ibneyrupom/">
-                <img class="social-image" src="./assets/youtube.png" alt="" />
+                <img src="./assets/youtube.png" alt="" />
               </a>
 
 
