--- a/index.html
+++ b/index.html
@@ -240,6 +240,46 @@
     </section>
 
   </main>
+  <footer>
+    <section id="footer-banner">
+      <div class="footer-container">
+        <img src="./assets/TechWavebig.png" alt="">
+        <div class="footer-social">
+          <div class="footer-links">
+            <img src="./assets/spotify.png" alt="">
+            <a href="">Spotify</a>
+          </div>
+          <div class="footer-links">
+            <img src="./assets/apple-podcast.png" alt="">
+            <a href="">Apple Podcast</a>
+          </div>
+          <div class="footer-links">
+            <img src="./assets/youtube-podcast.png" alt="">
+            <a href="">Youtube</a>
+          </div>
+          <div class="footer-links">
+            <img src="./assets/twitter.png" alt="">
+            <a href="">Twitter</a>
+          </div>
+
+
+
+
+
+
+
+
+        </div>
+        <div class="footer-copyright">
+          <p>© 2026 TechWave Podcast. All rights reserved.
+
+          </p>
+        </div>
+      </div>
+
+    </section>
+
+  </footer>
 </body>
 
 </html>
