--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
   <footer>
     <section id="footer-banner">
       <div class="footer-container">
-        <img src="./assets/TechWavebig.png" alt="">
+        <img class="techwave-footer" src="./assets/TechWavebig.png" alt="">
         <div class="footer-social">
           <div class="footer-links">
             <img src="./assets/spotify.png" alt="">
@@ -261,14 +261,6 @@
             <img src="./assets/twitter.png" alt="">
             <a href="">Twitter</a>
           </div>
-
-
-
-
-
-
-
-
         </div>
         <div class="footer-copyright">
           <p>© 2026 TechWave Podcast. All rights reserved.
