Adeed challange part hover functionaly in all button and add id's in feature button in the middle of the navbar

--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
 <body class="inter">
   <header>
     <nav>
-      <img src="./assets/TechWave.png" alt="" />
+      <div class="with-hamburger">
+        <img src="./assets/TechWave.png" alt="" />
+        <img class="hide" src="./assets/hamburger-menu.png" alt="" />
+
+      </div>
+
 
       <ul class="navbar-features">
         <li><a href="#apps">About</a></li>
@@ -37,6 +42,7 @@
       <div class="banner-container">
         <div class="circle-container">
           <img src="./assets/hero-circle.png" alt="Circle" class="circle" />
+          <a class="badge" href="">NEW</a>
           <img src="./assets/microphone.png" alt="Mic" class="mic" />
         </div>
 
